tests/fixtures/invalid/int_div_list.py
# Cannot divide Int and List[int]
x: float = 1 / [1, 2, 3]
